--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dictionary": "node scripts/build-dictionary.mjs"
+    "dictionary": "node scripts/build-dictionary.mjs",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -27,6 +28,7 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vitest": "^4.0.9"
   }
 }
